{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 653,
  "lineage": "3e729a9d-c948-a51b-d271-b023d81c9484",
  "resources": [
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "checo_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-checo-test-dev-group/ccaeaa64f4815c20-2023121419431802680000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-checo-test-dev-group/ccaeaa64f4815c20",
            "target_id": "10.20.0.194"
          },
          "dependencies": [
            "module.ec2_alb.aws_instance.web",
            "module.ec2_alb.aws_lb_target_group.checo_target_group",
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-priv-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "lando_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lando-test-dev-group/0c01efdd70ce1200-2023121419431804200000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lando-test-dev-group/0c01efdd70ce1200",
            "target_id": "10.20.0.66"
          },
          "dependencies": [
            "module.ec2_alb.aws_instance.web",
            "module.ec2_alb.aws_lb_target_group.lando_target_group",
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-priv-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "lewis_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lewis-test-dev-group/bdfb2390dcac557b-2023121419431805660000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lewis-test-dev-group/bdfb2390dcac557b",
            "target_id": "10.20.0.25"
          },
          "dependencies": [
            "module.ec2_alb.aws_instance.web",
            "module.ec2_alb.aws_lb_target_group.lewis_target_group",
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-priv-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-checo",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:145628923514:instance/i-06b577d6115ddd4e3",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b577d6115ddd4e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aeaccb84ea60bff6",
            "private_dns": "ip-10-20-0-66.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aecec555048b84c9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e57aed85b9e12630",
            "tags": {
              "Name": "app-checo-test-dev"
            },
            "tags_all": {
              "Name": "app-checo-test-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023408100065f5f2b"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-priv-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        },
        {
          "index_key": "app-lando",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:145628923514:instance/i-0d765dff539cb2fcf",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d765dff539cb2fcf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e4b597196b6d9819",
            "private_dns": "ip-10-20-0-194.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09556e5c4611854e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e57aed85b9e12630",
            "tags": {
              "Name": "app-lando-test-dev"
            },
            "tags_all": {
              "Name": "app-lando-test-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023408100065f5f2b"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-priv-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        },
        {
          "index_key": "app-lewis",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:145628923514:instance/i-0c8cbd064d5f43f9a",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8cbd064d5f43f9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04865a5a89ba3e483",
            "private_dns": "ip-10-20-0-25.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027cc3fd33ad8d645",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e57aed85b9e12630",
            "tags": {
              "Name": "app-lewis-test-dev"
            },
            "tags_all": {
              "Name": "app-lewis-test-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023408100065f5f2b"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-priv-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:loadbalancer/app/alprestamo-dev-alb/c4cea0825a3dfd9b",
            "arn_suffix": "app/alprestamo-dev-alb/c4cea0825a3dfd9b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alprestamo-dev-alb-1769271589.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:loadbalancer/app/alprestamo-dev-alb/c4cea0825a3dfd9b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alprestamo-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-023408100065f5f2b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00cb8c51fa8e2d3a2"
              },
              {
                "subnet_id": "subnet-019b5b1fb720a5d60"
              }
            ],
            "subnets": [
              "subnet-00cb8c51fa8e2d3a2",
              "subnet-019b5b1fb720a5d60"
            ],
            "tags": {
              "Name": "alprestamo-dev-alb"
            },
            "tags_all": {
              "Name": "alprestamo-dev-alb"
            },
            "vpc_id": "vpc-029b97b4aac97de0e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-pub-alt-subnet",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener/app/alprestamo-dev-alb/c4cea0825a3dfd9b/0dd67964e128dffb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener/app/alprestamo-dev-alb/c4cea0825a3dfd9b/0dd67964e128dffb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:loadbalancer/app/alprestamo-dev-alb/c4cea0825a3dfd9b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_alb.aws_lb.application_load_balancer",
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-pub-alt-subnet",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2",
            "certificate_arn": "arn:aws:acm:us-west-1:145628923514:certificate/b6953fda-67b2-4668-a619-cbf2cd9c9db3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lando-test-dev-group/0c01efdd70ce1200",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:loadbalancer/app/alprestamo-dev-alb/c4cea0825a3dfd9b",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_alb.aws_lb.application_load_balancer",
            "module.ec2_alb.aws_lb_target_group.lando_target_group",
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-pub-alt-subnet",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "checo-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-checo-test-dev-group/ccaeaa64f4815c20",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener-rule/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2/9e505520b418a525",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "alprestamo-checo-dev.webhostingcloudtest.click"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener-rule/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2/9e505520b418a525",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2",
            "priority": 200,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_alb.aws_lb.application_load_balancer",
            "module.ec2_alb.aws_lb_listener.alb_https_listener",
            "module.ec2_alb.aws_lb_target_group.checo_target_group",
            "module.ec2_alb.aws_lb_target_group.lando_target_group",
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-pub-alt-subnet",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lando-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lando-test-dev-group/0c01efdd70ce1200",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener-rule/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2/c3556285e024606c",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "alprestamo-lando-dev.webhostingcloudtest.click"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener-rule/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2/c3556285e024606c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_alb.aws_lb.application_load_balancer",
            "module.ec2_alb.aws_lb_listener.alb_https_listener",
            "module.ec2_alb.aws_lb_target_group.lando_target_group",
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-pub-alt-subnet",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lewis-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lewis-test-dev-group/bdfb2390dcac557b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener-rule/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2/010cfff969e4a557",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "alprestamo-checo-dev.webhostingcloudtest.click"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener-rule/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2/010cfff969e4a557",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:listener/app/alprestamo-dev-alb/c4cea0825a3dfd9b/743a70e52828cca2",
            "priority": 300,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_alb.aws_lb.application_load_balancer",
            "module.ec2_alb.aws_lb_listener.alb_https_listener",
            "module.ec2_alb.aws_lb_target_group.lando_target_group",
            "module.ec2_alb.aws_lb_target_group.lewis_target_group",
            "module.vpc.aws_security_group.alprestamo-sg",
            "module.vpc.aws_subnet.dev-pub-alt-subnet",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "checo_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-checo-test-dev-group/ccaeaa64f4815c20",
            "arn_suffix": "targetgroup/app-checo-test-dev-group/ccaeaa64f4815c20",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-checo-test-dev-group/ccaeaa64f4815c20",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-checo-test-dev-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.alprestamo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lando_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lando-test-dev-group/0c01efdd70ce1200",
            "arn_suffix": "targetgroup/app-lando-test-dev-group/0c01efdd70ce1200",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lando-test-dev-group/0c01efdd70ce1200",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-lando-test-dev-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.alprestamo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lewis_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lewis-test-dev-group/bdfb2390dcac557b",
            "arn_suffix": "targetgroup/app-lewis-test-dev-group/bdfb2390dcac557b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:145628923514:targetgroup/app-lewis-test-dev-group/bdfb2390dcac557b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-lewis-test-dev-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.alprestamo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4813fdb0a7acba4",
            "association_id": "eipassoc-0bba220011ac550a7",
            "domain": "vpc",
            "id": "eipalloc-0e4813fdb0a7acba4",
            "network_border_group": "us-west-1",
            "network_interface": "eni-06f42ae60844e074f",
            "private_dns": "ip-10-20-40-112.us-west-1.compute.internal",
            "private_ip": "10.20.40.112",
            "public_dns": "ec2-54-219-53-177.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.53.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "alprestamo-test-dev-natgw-eip"
            },
            "tags_all": {
              "Name": "alprestamo-test-dev-natgw-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:145628923514:internet-gateway/igw-07cd5739338105314",
            "id": "igw-07cd5739338105314",
            "owner_id": "145628923514",
            "tags": {
              "Name": "alprestamo-test-dev-ig",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "alprestamo-test-dev-ig",
              "environment": "dev"
            },
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4813fdb0a7acba4",
            "association_id": "eipassoc-0bba220011ac550a7",
            "connectivity_type": "public",
            "id": "nat-0dbfa03aecc50693e",
            "network_interface_id": "eni-06f42ae60844e074f",
            "private_ip": "10.20.40.112",
            "public_ip": "54.219.53.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00cb8c51fa8e2d3a2",
            "tags": {
              "Name": "alprestamo-test-dev-natgw"
            },
            "tags_all": {
              "Name": "alprestamo-test-dev-natgw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:145628923514:route-table/rtb-0ce05be99963ca738",
            "id": "rtb-0ce05be99963ca738",
            "owner_id": "145628923514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0dbfa03aecc50693e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.20.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "alprestamo-test-dev-rt-private"
            },
            "tags_all": {
              "Name": "alprestamo-test-dev-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.natg",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:145628923514:route-table/rtb-0627adb5432f56046",
            "id": "rtb-0627adb5432f56046",
            "owner_id": "145628923514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cd5739338105314",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.20.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alprestamo-test-dev-rt-public"
            },
            "tags_all": {
              "Name": "alprestamo-test-dev-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-alt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c0d65d0b2e2f3ba",
            "route_table_id": "rtb-0ce05be99963ca738",
            "subnet_id": "subnet-03eb0f6ea6b6c9815"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.natg",
            "module.vpc.aws_route_table.route_table_priv",
            "module.vpc.aws_subnet.dev-priv-alt-subnet",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e4e590dc0c438ea",
            "route_table_id": "rtb-0ce05be99963ca738",
            "subnet_id": "subnet-0e57aed85b9e12630"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.natg",
            "module.vpc.aws_route_table.route_table_priv",
            "module.vpc.aws_subnet.dev-priv-main-subnet",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-alt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cabbf4e195b4b17c",
            "route_table_id": "rtb-0627adb5432f56046",
            "subnet_id": "subnet-019b5b1fb720a5d60"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_route_table.route_table_pub",
            "module.vpc.aws_subnet.dev-pub-alt-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02370e14672ac85b1",
            "route_table_id": "rtb-0627adb5432f56046",
            "subnet_id": "subnet-00cb8c51fa8e2d3a2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_route_table.route_table_pub",
            "module.vpc.aws_subnet.dev-pub-main-subnet",
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alprestamo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:145628923514:security-group/sg-023408100065f5f2b",
            "description": "Allow basic inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023408100065f5f2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_basic_traffic",
            "name_prefix": "",
            "owner_id": "145628923514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "necessary opened ports"
            },
            "tags_all": {
              "Name": "necessary opened ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-priv-alt-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:145628923514:subnet/subnet-03eb0f6ea6b6c9815",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.20.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eb0f6ea6b6c9815",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145628923514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alprestamo-test-dev-priv-alt"
            },
            "tags_all": {
              "Name": "alprestamo-test-dev-priv-alt"
            },
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-priv-main-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:145628923514:subnet/subnet-0e57aed85b9e12630",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e57aed85b9e12630",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145628923514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alprestamo-test-dev-priv-main"
            },
            "tags_all": {
              "Name": "alprestamo-test-dev-priv-main"
            },
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub-alt-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:145628923514:subnet/subnet-019b5b1fb720a5d60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.20.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019b5b1fb720a5d60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145628923514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alprestamo-test-dev-public-alt"
            },
            "tags_all": {
              "Name": "alprestamo-test-dev-public-alt"
            },
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub-main-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:145628923514:subnet/subnet-00cb8c51fa8e2d3a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.20.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cb8c51fa8e2d3a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145628923514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alprestamo-test-dev-public-main"
            },
            "tags_all": {
              "Name": "alprestamo-test-dev-public-main"
            },
            "vpc_id": "vpc-029b97b4aac97de0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.alprestamo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alprestamo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:145628923514:vpc/vpc-029b97b4aac97de0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0597a6694d1a52439",
            "default_route_table_id": "rtb-03f86886fed95edeb",
            "default_security_group_id": "sg-04187a079f2054416",
            "dhcp_options_id": "dopt-0e571869851eb26ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-029b97b4aac97de0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f86886fed95edeb",
            "owner_id": "145628923514",
            "tags": {
              "Name": "alprestamo-test-dev"
            },
            "tags_all": {
              "Name": "alprestamo-test-dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}